--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,3 +30,24 @@ body {
     margin: 30px auto;
     width: fit-content;
 }
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    width: 100%;
+    align-items: center;
+}
+
+.btn-game {
+    width: 80px;
+    height: 40px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #fff;
+    color: #333;
+    font-size: 12px;
+    font-weight: bold;
+    margin: 0 5px;
+    cursor: pointer;
+}
