--- a/styles-anders.css
+++ b/styles-anders.css
@@ -1,5 +1,5 @@
 .grid {
-    width: 220px;
+    width: 200px;
     height: 480px;
     display: flex;
     flex-wrap: wrap;
@@ -9,10 +9,14 @@
 .grid div {
     width: 20px;
     height: 20px;
-    border: solid 1px gray;
+
 }
 
 .block {
     background-color: red;
-    border: solid 1px black;
+    /* border: solid 1px black; */
+}
+
+.block-in-use {
+    background-color: tomato;
 }
