--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,7 +9,7 @@ body {
     height: 100vh;
     overflow: hidden;
 }
-.cell {
+.cell, .cell-next {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -25,16 +25,35 @@ body {
     font-weight: bold;
     line-height: 100px;
 }
+#game-container {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    /* align-items: center; */
 
+}
 #grid {
-    margin: 30px auto;
-    width: fit-content;
+    /* margin: 30px auto;
+    width: fit-content; */
+    padding: 10px;
+    margin: 10px;
+}
+
+#next-piece {
+    padding: 10px;
+    margin: 10px;
+}
+
+#score-container {
+    padding: 10px;
+    margin: 10px;
 }
 
 .buttons {
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin: 30px;
     width: 100%;
     align-items: center;
 }
