--- a/styles.css
+++ b/styles.css
@@ -5,18 +5,19 @@
 }
 
 html {
-    background: linear-gradient(90deg, #be1a04 15%,#e66b66 45%,#af0a0a 80%);
+    background: linear-gradient(90deg, #be1a04 15%, #e66b66 45%, #af0a0a 80%);
     background-size: cover;
 }
 
 body {
-    
     width: 100vw;
     height: 100vh;
-    
+
     /* overflow: hidden; */
 }
-.cell, .cell-next {
+
+.cell,
+.cell-next {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
@@ -32,6 +33,7 @@ body {
     font-weight: bold;
     line-height: 100px;
 }
+
 #game-container {
     display: flex;
     flex-direction: row;
@@ -40,6 +42,7 @@ body {
     /* align-items: center; */
 
 }
+
 #grid {
     /* margin: 30px auto;
     width: fit-content; */
