--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,10 +71,52 @@ body {
     cursor: pointer;
 }
 
-.active-piece {
+/* .active-piece {
     background-color: blue;
 }
 
 .taken {
     background-color: blue;
+} */
+
+.dark-blue-box {
+    background-image: url("../images/dark-blue-box.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.blue-box {
+    background-image: url("../images/green-box.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.green-box {
+    background-image: url("../images/green-box.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.orange-box {
+    background-image: url("../images/orange-box.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.purple-box {
+    background-image: url("../images/purple-box.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.red-box {
+    background-image: url("../images/red-box.png");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
