--- a/styles-martina.css
+++ b/styles-martina.css
@@ -45,12 +45,12 @@
 	
 }
 .btn-game:hover {
-	background: #a61715;
+	background: #bd0707;
 	text-shadow: 0 1px 2px rgba(0,0,0,0.75), 0 0 40px #FFF;
 	box-shadow:
 		inset 1px 1px 0px rgba(255,255,255,0.25), /* highlight */
-		inset 0 0 6px #da3b2c, /* inner glow */
-		inset 0 80px 80px -40px #dd4330, /* gradient */
+		inset 0 0 6px #2cdad1, /* inner glow */
+		inset 0 80px 80px -40px #4508d3, /* gradient */
 		1px 1px 3px rgba(0,0,0,0.75); /* shadow */
 		
 }
