--- a/styles-martina.css
+++ b/styles-martina.css
@@ -3,14 +3,16 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 html {
     background-image: url(images/santa-lights-night.jpeg);
-    background-size: cover;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: center;
     color: #ccc;
+    font-weight: bolder;
+    object-fit: scale-down;
 }
 
 
@@ -19,8 +21,8 @@ html {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -64,72 +66,61 @@ html {
     margin: 20px;
     width: 100%;
     align-items: center;
-}
-
-.btn-game {
-    width: 70px;
-    height: 40px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #fff;
-    color: #333;
-    font-size: 12px;
-    font-weight: bold;
-    margin: 0 5px;
-    cursor: pointer;
+    position:relative;
+    right: 30px;
 }
 
 .active-piece {
-    background-image: url("./images/blue-box.png");
+    background-image: url("assets-anders/images/blue-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .taken {
-    background-image: url("./images/blue-box.png");
+    background-image: url("assets-anders/images/blue-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .dark-blue-box {
-    background-image: url("./images/dark-blue-box.png");
+    background-image: url("assets-anders/images/blue-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .blue-box {
-    background-image: url("./images/green-box.png");
+    background-image: url("assets-anders/images/green-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .green-box {
-    background-image: url("./images/green-box.png");
+    background-image: url("assets-anders/images/green-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .orange-box {
-    background-image: url("./images/orange-box.png");
+    background-image: url("assets-anders/images/orange-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .purple-box {
-    background-image: url("./images/purple-box.png");
+    background-image: url("assets-anders/images/purple-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
 .red-box {
-    background-image: url("./images/red-box.png");
+    background-image: url("assets-anders/images/red-box.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
