Fix bug with pause/resume button when reseting the game

--- a/assets/css/style-eric.css
+++ b/assets/css/style-eric.css
@@ -79,9 +79,9 @@ body {
     cursor: pointer;
 }
 
-.active-piece {
-    /* background-color: red; */
-}
+/* .active-piece {
+    background-color: red;
+} */
 
 .test1-red {
     background-color: red;
