--- a/assets/css/style-alex.css
+++ b/assets/css/style-alex.css
@@ -365,3 +365,17 @@ html {
         transform: translate3d(-50%, 0, 0);
     }
 }
+
+footer {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-image: url("../images/snowpile3.svg");
+    /* background-image: url("../images/snowpile2.png"); */
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    bottom: 0;
+    z-index: -1;
+}
