--- a/assets/css/style-alex.css
+++ b/assets/css/style-alex.css
@@ -22,10 +22,10 @@ body {
     display: table-cell;
     vertical-align: middle;
     text-align: center;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     background-color: transparent;
-    border: 1px solid #ccc;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     border-radius: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     margin: 0 5px;
