--- a/assets/css/style-alex.css
+++ b/assets/css/style-alex.css
@@ -391,3 +391,13 @@ footer {
     background-attachment: fixed;
     bottom: 0;
 }
+
+#fireworks {
+    background-color: transparent;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
