--- a/assets/css/style-alex.css
+++ b/assets/css/style-alex.css
@@ -10,10 +10,13 @@ body {
     url(../images/santa-lights-night.jpeg);
     background-repeat: no-repeat;
     background-position: center;
+    background-size: cover;
     color: #ccc;
     font-weight: bolder;
     object-fit: scale-down;
     height: 100vh;
+    max-height: 100vh;
+    position: relative;
 }
 
 
@@ -43,7 +46,7 @@ body {
     /* align-items: center; */
     align-content: center;
     width: fit-content;
-    margin: 150px auto;
+    margin: 100px auto;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(10px);
@@ -381,7 +384,7 @@ body {
 }
 
 footer {
-    width: 100%;
+    width: 100vw;
     height: 250px;
     position: absolute;
     background-image: url("../images/snowpile3.svg");
