Fix bug with start button

--- a/assets/css/style-alex.css
+++ b/assets/css/style-alex.css
@@ -67,6 +67,11 @@ body {
 #next-piece {
     padding: 10px;
     margin: 10px;
+    background-image: url(../images/exploding-present.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+    background-blend-mode: darken;
 }
 
 #score-container {
