--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -445,6 +445,7 @@ footer {
     background-position: center;
     background-attachment: fixed;
     bottom: 0;
+    z-index: -1;
 }
 
 #fireworks {
